<resources>
    <string name="app_name">My Kanji</string>
    <string name="version">Version: 0.3.0</string>

    <string name="hello_world">Hello world!</string>
    <string name="paused">paused</string>
    <string name="resume">resuming</string>
    <string name="edit">edit</string>
    <string name="cancel">cancel</string>
    <string name="continew">continue</string>
    <string name="delete">delete</string>
    <string name="addNew">Add new</string>
    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="reveal">reveal</string>
    <string name="next">next</string>
    <string name="furigana">Furigana</string>
    <string name="kanji">Kanji</string>
    <string name="meaning">Meaning</string>
    <string name="correct">correct</string>
    <string name="wrong">wrong</string>
    <string name="search">Search</string>

    <string name="action_settings">Settings</string>
    <string name="action_kanjilist">Kanji list</string>
    <string name="action_input">New Kanji</string>
    <string name="action_sortDifficulty">Sort on Difficulty</string>
    <string name="action_sortID">Sort on ID</string>
    <string name="action_clearDatabase">Clear Database</string>
    <string name="action_exportDatabase">Export Database</string>
    <string name="db_export_good">Kanji successfully exported to MyKanji folder (Importing requires Astro app)</string>
    <string name="db_export_fail">Database export failed</string>
    <string name="db_export_none">Unable to export, the database is empty</string>
    <string name="action_importDatabase">Import Database</string>

    <string name="title_activity_input">InputActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="mainWelcomeTitle">Welcome to </string>
    <string name="mainWelcomeMessage">Welcome, please start by adding your first Kanji</string>
    <string name="mainEmptyListMessage">Your list is empty, please start by adding your first Kanji or import an existing database</string>
    <string name="mainAreYouSure">Are you sure you want to delete: </string>
    <string name="areYouSureClear">Do you want to delete all your Kanji? This cannot be undone</string>
    <string name="areYouSureImport">If you import a database, you will lose all your current Kanji. This cannot be undone (Importing requires Astro app)</string>

    <string name="modeTimed">Timer mode active</string>
    <string name="modeSwipe">Swipe mode active</string>
    <string name="modeButton">Button mode active</string>

    <string name="settingsAbout">About this application</string>
    <string name="settingsQuestionMode">Questioning mode</string>
    <string name="settingsTimerModeSecondsReveal">Seconds until reveal:</string>
    <string name="settingsTimerModeSecondsNext">Seconds until next:</string>
    <string name="settingInputMode">Input mode</string>
    <string name="inputModeType">Type</string>
    <string name="inputMode2Button">Yes/No buttons</string>
    <string name="inputModeNone">None</string>
    <string name="settingsShowInstructions">During questioning:</string>
    <string name="settingsShowFurigana">Show Furigana</string>
    <string name="settingsShowKanji">Show Kanji</string>
    <string name="settingsShowMeaning">Show Meaning</string>
    <string name="settingsShowDifficulty">Show Difficulty</string>
    <string name="settingsShow">show</string>
    <string name="settingsHide">hide</string>
    <string name="settingsNoZero">Values below 1 are not allowed</string>
    <string name="settingsInvalid">Invalid value</string>
    <string name="settingsShowMenuButtons">Show menu buttons</string>
    <string name="settingsSelectTheme">Theme</string>
    <string name="settingInputModeType">Check for:</string>
    <string name="settingsSetSizes">Set font sizes</string>
    <string name="settingsDefaultDifficulty">Default difficulty: </string>
    <string name="settingsFilter">Filter difficulty levels</string>
    <string name="settingsChangeDifficulty">Allow difficulty change</string>
    <string name="settingSortOn">Sort words on: </string>
    <string name='settingsColourcode'>Colour code difficulty</string>

    <string name="sortRandom">Random</string>
    <string name="sortDifficultyASC">Difficulty low > high</string>
    <string name="sortDifficultyDESC">Difficulty high > low</string>
    <string name="sortIdASC">ID low > high</string>
    <string name="sortIdDESC">ID high > low</string>

    <string name="aboutTitle">About</string>
    <string name="aboutMessage">Thank you for using the My Kanji app</string>
    <string name="aboutWebsite">http://www.kevinmatsubara.com</string>

    <string name="questionModeTime">Timed</string>
    <string name="questionModeSwipe">Swipe</string>
    <string name="questionModeButton">Button</string>

    <string name="themeLight">Light</string>
    <string name="themeDark">Dark</string>

    <string name="inputAddNewKanji">insert new Kanji</string>
    <string name="inputEditKanji">editing Kanji: </string>
    <string name="inputHintFurigana">Furigana...</string>
    <string name="inputHintKanji">Kanji...</string>
    <string name="inputHintMeaning">Meaning...</string>
    <string name="inputUnableToAdd">Unable to enter new kanji to list...</string>
    <string name="inputNewKanjiAdded">New kanji added to list</string>
    <string name="inputFillInAllPlease">Please fill in all input areas</string>
    <string name="inputUpdateWrong">Unable to update kanji</string>
    <string name="inputUpdateSuccess">Kanji has been updated</string>
    <string name="inputKanjiExists">This Kanji already exists: </string>
    <string name="inputAddAnyway"> Do you want to add anyway?</string>
    <string name="inputSearchFailed">No words could be found...</string>
    <string name="inputAtLeastOne">Fill in at least a furigana, kanji or meaning</string>

    <string name="statsTitle">Statistics</string>
    <string name="statsWords">words</string>

    <string name="error">error</string>
    <string name="errorKanjiListEmpty">Kanji list is empty...</string>
    <string name="errorUnableToLoadKanji">Unable to load Kanji...</string>
    <string name="title_activity_dialog_number_picker">dialogNumberPicker</string>
</resources>
