<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="0"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_showStats"
        android:title="@string/statsTitle"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_kanjilist"
        android:title="@string/action_kanjilist"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_input"
        android:title="@string/action_input"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>
