<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kevin.japanesememoryapp.ListActivity">
    <item
        android:id="@+id/action_sortDifficulty"
        android:title="@string/action_sortDifficulty"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sortID"
        android:title="@string/action_sortID"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clearDatabase"
        android:title="@string/action_clearDatabase"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_input"
        android:title="@string/action_input"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>
