<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myKanji.InputActivity">

    <TextView
        android:text="@string/inputAddNewKanji"
        android:id="@+id/lbl_addKanji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tbx_addFurigana"
        android:hint="@string/inputHintFurigana"
        android:layout_below="@id/lbl_addKanji"
        android:maxLength="20"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tbx_addKanji"
        android:hint="@string/inputHintKanji"
        android:maxLength="10"
        android:layout_below="@id/tbx_addFurigana"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tbx_addMeaning"
        android:hint="@string/inputHintMeaning"
        android:maxLength="40"
        android:layout_below="@id/tbx_addKanji"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_addNewKanji"
        android:text="@string/addNew"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_editKanji"
        android:text="@string/edit"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
